# ssh-ops

./: .gitignore  README.md  pyproject.toml  requirements.txt  ssh-ops.py  test_server.py
config/: default.yml  docker-test.yml  psmp-example.yml  test.yml
docker/: Dockerfile  docker-compose.yml  start.sh  stop.sh
scripts/: test_psmp_asyncssh.py
ssh_ops/: __init__.py  __main__.py  cli.py  config.py  crypto.py  executor.py  global.yml  logger.py  psmp_shell.py  server.py  yaml_util.py
ssh_ops/analyzers/: __init__.py  generic.py  ping_am.py  ping_ds.py  ping_gateway.py  ping_idm.py
ssh_ops/analyzers/knowledge/: generic.yml  ping_am.yml  ping_ds.yml  ping_gateway.yml  ping_idm.yml
ssh_ops/plugins/: __init__.py  ini_lint.py  json_lint.py  ping_gateway.py  properties_lint.py  shell_script.py  xml_lint.py  yaml_lint.py
ssh_ops/templates/: index.html
tests/: conftest.py  test_analyzers.py  test_cli.py  test_config.py  test_crypto.py  test_executor.py  test_integration.py  test_logger.py  test_plugins.py  test_server_api.py
