[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh-ops"
version = "0.1.0"
description = "Lightweight multi-server SSH tool with real-time web UI"
requires-python = ">=3.11"
dependencies = [
    "paramiko>=3.4",
    "asyncssh>=2.14",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "websockets>=13.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["ssh_ops*"]

[project.scripts]
ssh-ops = "ssh_ops.cli:main"
